# polars-metal

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  crossing-tax.json  librust_out.rlib  perf-report.json  pyproject.toml  ruff.toml
crates/polars-metal-buffer/: Cargo.toml
crates/polars-metal-buffer/benches/: placeholder.rs
crates/polars-metal-buffer/src/: alignment.rs  bridge.rs  device.rs  dict.rs  error.rs  lib.rs  null_bitmap.rs  staging.rs
crates/polars-metal-buffer/tests/: test_dict.rs  test_staging.rs
crates/polars-metal-core/: Cargo.toml
crates/polars-metal-core/src/: arena.rs  corr.rs  error.rs  fft.rs  lib.rs  router_udf.rs  udf.rs  vector_search.rs
crates/polars-metal-core/src/fusion/: density.rs  mod.rs  py.rs  scope.rs  subgraph.rs  supported_ops.rs
crates/polars-metal-core/src/plan/: mod.rs
crates/polars-metal-core/src/router/: affinity.rs  cost.rs  mod.rs
crates/polars-metal-core/src/udf/: common.rs  compact.rs  compare.rs  dt.rs  dtw.rs  fused_expr.rs  groupby.rs  logical.rs  mod.rs  predicate.rs  rolling.rs
crates/polars-metal-core/src/udf/groupby/: legacy.rs  mod.rs
crates/polars-metal-core/tests/: proptest_subgraph.rs  test_agg_expr.rs  test_arena.rs  test_density.rs  test_execute_groupby_unit.rs  test_fusion_scope.rs  test_mlx_subgraph.rs  test_mlx_subgraph_metal_buffer.rs  test_plan_groupby.rs  test_plan_ir.rs  test_router_affinity.rs  test_router_cost.rs  test_router_sweep.rs  test_router_types.rs  test_router_walk.rs  test_subgraph_dtype_readback.rs  test_subgraph_int.rs  test_supported_ops.rs  test_take_subgraph.rs  test_vector_rerank.rs
crates/polars-metal-kernels/: Cargo.toml  build.rs
crates/polars-metal-kernels/benches/: aggregate_fused.rs  cmp_f64.rs  cmp_i64.rs  filter_predicate.rs  filter_scatter.rs  groupby_aggregate.rs  groupby_build_partitioned.rs  groupby_build_sort.rs  groupby_hash.rs  logical_bool.rs
crates/polars-metal-kernels/src/: cmp.rs  command.rs  dt.rs  dtw.rs  fft.rs  filter.rs  groupby.rs  lib.rs  logical.rs  pipeline.rs  rolling.rs  shader_lib.rs
crates/polars-metal-kernels/src/aggregate_fused/: cache.rs  emitter.rs  mod.rs  signature.rs
crates/polars-metal-kernels/src/groupby_build_partitioned/: gpu.rs  mod.rs  reference.rs  scratch.rs
crates/polars-metal-kernels/src/groupby_build_sort/: gpu.rs  mod.rs  reference.rs
crates/polars-metal-kernels/src/groupby_global_hash/: gpu.rs  mod.rs
crates/polars-metal-kernels/tests/: bench_cpu_build_compare.rs  profile_build_paths.rs  test_aggregate_fused_emitter.rs  test_aggregate_fused_expression.rs  test_aggregate_fused_signature.rs  test_cmp_f64.rs  test_cmp_i64.rs  test_compaction_pipeline.rs  test_dispatch.rs  test_dispatch_groupby_fused.rs  test_dt_gregorian.rs  test_dtw.rs  test_fft.rs  test_filter_predicate.rs  test_filter_proptest.rs  test_filter_scatter.rs  test_filter_scatter_bool.rs  test_filter_scatter_f64.rs  test_fused_library_cache.rs  test_fused_vs_per_agg.proptest-regressions  test_fused_vs_per_agg.rs  test_groupby_aggregate.proptest-regressions  test_groupby_aggregate.rs  test_groupby_build.proptest-regressions  test_groupby_build.rs  test_groupby_build_partitioned_build.rs  test_groupby_build_partitioned_reference.rs  test_groupby_build_partitioned_scatter.rs  test_groupby_build_sort_reference.rs  test_groupby_global_hash_smoke.proptest-regressions  test_groupby_global_hash_smoke.rs  test_groupby_hash.rs  test_groupby_pipeline.rs  test_groupby_segment.rs  test_groupby_sort_full.rs  test_groupby_sort_lane.rs  test_key_encoding.rs  test_key_encoding_small_ints.rs  test_key_encoding_utf8.rs  test_logical_bool.rs  (+2 more)
crates/polars-metal-mlx-sys/: Cargo.toml  build.rs
crates/polars-metal-mlx-sys/cxx/: hello.cc  hello.h  mlx_bridge.cc  mlx_bridge.h
crates/polars-metal-mlx-sys/src/: array.rs  elementwise.rs  error.rs  fft.rs  lib.rs  matmul.rs  reduce.rs  scan.rs  shape.rs  sort.rs
crates/polars-metal-mlx-sys/tests/: test_array.rs  test_array_zerocopy.rs  test_cumsum.rs  test_elementwise.rs  test_elementwise_trans.rs  test_int_readback.rs  test_iota.rs  test_reduce.rs  test_scan_matmul.rs  test_scan_matmul_fft.rs  test_shift.rs  test_smoke.rs  test_sort.rs  test_take.rs  test_vector_ffi.rs
docs/: architecture.md  crossing-tax-report.md  kernel-authoring.md  m4-benchmark-survey.md  metal-namespace-contracts.md  open-questions.md  perf-report.md  upstream-polars-engine-hook.md
python/polars_metal/: __init__.py  _callback.py  _corr_detect.py  _corr_dispatch.py  _corr_namespace.py  _detect_common.py  _dt_detect.py  _dt_dispatch.py  _dtw_detect.py  _dtw_dispatch.py  _dtw_namespace.py  _engine.py  _fft_detect.py  _fft_dispatch.py  _fft_namespace.py  _fusion_analyzer.py  _join_gather.py  _pytest_plugin.py  _rolling_detect.py  _rolling_dispatch.py  _udf.py  _vector_detect.py  _vector_dispatch.py  _vector_namespace.py  _walker.py
scripts/: refresh-references.sh  spike_a4_dtw.py  spike_corr_crossover.py
shaders/: _fft_radix.metal  _groupby.metal  _hello.metal  _validity.metal  aggregate.metal  cmp_f64.metal  cmp_i64.metal  dt_gregorian.metal  dtw.metal  fft.metal  fft_pack.metal  filter_predicate.metal  filter_scatter.metal  groupby_build.metal  groupby_build_partitioned_build.metal  groupby_build_partitioned_scatter.metal  groupby_global_hash.metal  groupby_hash.metal  groupby_segments.metal  groupby_sort_u128_lane.metal  hello.metal  logical_bool.metal  rolling.metal
tests/bench/: _canonical_q1_fixture.py  _canonical_q1_fixture_f32.py  _gate_check.py  _lineitem_fixture.py  _q6_fixture.py  _q6_fixture_f32.py  baseline.json  bench_corr.py  test_baseline_gate.py  test_filter_e2e.py  test_gate_check.py  test_placeholder.py  test_tpch_canonical_q1.py  test_tpch_canonical_q1_f32.py  test_tpch_q1.py  test_tpch_q1_100m.py  test_tpch_q6.py  test_tpch_q6_f32.py
tests/conformance/: _polars_known_failures.txt  _polars_known_failures_expr_binary.txt  _polars_known_failures_operations_aggregation.txt  _polars_known_failures_operations_comparison.txt  _polars_known_failures_operations_filter.txt  _skips.toml  conftest.py  (+4 more)
(+160 files in other folders)
