[workspace]
resolver = "2"
members = [
    "crates/polars-metal-buffer",
    "crates/polars-metal-core",
    "crates/polars-metal-kernels",
    "crates/polars-metal-mlx-sys",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dbfclark/polars-metal"

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
