[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "polars-metal"
version = "0.0.0"
description = "Metal-backed execution engine for Polars on Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    # Pinned exactly. Our monkey-patch is sensitive to Polars internals
    # (LazyFrame.collect signature, _gpu_engine_callback shape, post_opt_callback
    # behavior); bumping requires re-validation. The references/polars submodule
    # is pinned to the matching py-1.40.1 tag — keep them aligned.
    "polars==1.40.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
    "hypothesis>=6",
    "ruff>=0.6",
    # dtaidistance is the differential oracle + bench bar (and the opt-in
    # CPU-fallback engine) for the M6 A4 .metal.dtw kernel.
    "dtaidistance",
    # pyarrow + cloudpickle are needed by Polars' own test suite when we run
    # it through the conformance harness (tests/conformance/test_polars_suite.py).
    "pyarrow>=18",
    "cloudpickle>=3",
]

[tool.maturin]
module-name = "polars_metal._native"
python-source = "python"
manifest-path = "crates/polars-metal-core/Cargo.toml"
features = ["polars-metal-core/extension-module"]
