[package]
name = "polars-metal-buffer"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
arrow-buffer = "53"
objc2 = "0.5"
objc2-metal = { version = "0.2", features = ["MTLDevice", "MTLBuffer", "MTLResource"] }
objc2-foundation = "0.2"
thiserror = "1"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
