[package]
name = "polars-metal-kernels"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
objc2 = "0.5"
objc2-metal = { version = "0.2", features = [
    "MTLDevice",
    "MTLLibrary",
    "MTLComputePipeline",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLBuffer",
    "MTLResource",
    "MTLTypes",
] }
objc2-foundation = { version = "0.2", features = ["NSURL", "NSString", "NSError"] }
polars-metal-buffer = { path = "../polars-metal-buffer" }
thiserror = "1"

[lints]
workspace = true
