[package]
name = "polars-metal-kernels"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
objc2 = "0.5"
objc2-metal = { version = "0.2", features = [
    "MTLDevice",
    "MTLLibrary",
    "MTLComputePipeline",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLBuffer",
    "MTLResource",
    "MTLTypes",
] }
objc2-foundation = { version = "0.2", features = ["NSURL", "NSString", "NSError"] }
polars-metal-buffer = { path = "../polars-metal-buffer" }
polars-metal-mlx-sys = { path = "../polars-metal-mlx-sys" }
rayon = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
rand = "0.8"
# Test-only access to the IR types so signature tests can exercise the
# IR → kernel-layer descriptor conversion path. Cargo permits this
# dev-dep cycle (polars-metal-core depends on polars-metal-kernels) by
# only linking it for the test binaries.
polars-metal-core = { path = "../polars-metal-core" }

[[bench]]
name = "cmp_i64"
harness = false

[[bench]]
name = "cmp_f64"
harness = false

[[bench]]
name = "logical_bool"
harness = false

[[bench]]
name = "filter_predicate"
harness = false

[[bench]]
name = "filter_scatter"
harness = false

[[bench]]
name = "groupby_hash"
harness = false

[[bench]]
name = "groupby_aggregate"
harness = false

[[bench]]
name = "aggregate_fused"
harness = false

[lints]
workspace = true
